status-img visibility issue

--- a/src/styles/AppList.css
+++ b/src/styles/AppList.css
@@ -13,6 +13,7 @@
     position: sticky;
     top: 0;
     background-color: #2c313a;
+    z-index: 1;
   }
   
   .table-headers th {
